# projetos6

./: .env.example  .gitignore  DOMAIN_DRIVEN_DJANGO_GUIDE.md  Makefile  README.md  binary.py  compose.yaml  ingest.md  load_dataset_to_sqlite.py  monorepo-uv-workflow.md  notes.txt  prompt.md  pyproject.toml  rules.md  tasks.py
.gemini/: settings.json
.github/instructions/: captcha-ocr.instructions.md
api/: pyproject.toml
api/api/: settings.py  urls.py
api/api/schemas/: dataJud.py
api/core/: models.py  views.py
api/core/management/commands/: load_juristcu.py
api/core/migrations/: 0001_initial.py
api/data/: dataJud.json  dataJud_processed_example.json
apps/api/: pyproject.toml  pytest.ini
apps/api/api/: settings.py  urls.py
apps/api/api/schemas/: dataJud.py
apps/api/core/: admin.py  serializers.py  services.py  views.py
apps/api/core/exceptions/: __init__.py
apps/api/core/migrations/: 0001_initial.py  0002_alter_processo_data_ajuizamento_and_more.py  0002_datajudsource.py  0002_processo_pdf_url.py
apps/api/core/models/: __init__.py  analise.py  assunto.py  classe.py  movimento.py  orgao_julgador.py  palavra_chave.py  processo.py
apps/api/core/serializers/: analise.py  analise_serializer.py  assunto.py  classe_serializer.py  orgao_julgador_serializer.py  palavras_chave.py  processo.py  processo_serializer.py
apps/api/core/tests/: base.py  conftest.py  constants.py  helpers.py
apps/api/core/tests/integration/: test_ingestion_pipeline_integration.py
apps/api/core/tests/views/: test_processo_deduplicar.py  test_processo_nao_possuem_pdf.py
apps/api/core/types/: processo_dict.py
apps/api/data/: query.json
apps/api/tests/: test_deduplicar_api.py
apps/ingestion/: README.md  ingest.ipynb  main.py  processos_Aposentadoria_e_Pensão.json  processos_Categoria_Profissional_Especial.json  processos_Contrato_Individual_de_Trabalho.json  processos_Direito_Coletivo_do_Trabalho.json  pyproject.toml
apps/ingestion/src/ingestion/: cli.py  main.py  providers.py  submitter.py  utils.py
apps/ingestion/src/ingestion/cli/: __init__.py
apps/ingestion/src/ingestion/data/: processos_Categoria_Profissional_Especial.json  processos_aposentadoria_e_pensao.json  processos_contrato_individual_de_trabalho.json  processos_direito_coletivo_do_trabalho.json  processos_direito_de_greve___lockout.json  processos_direito_individual_do_trabalho.json  processos_direito_sindical_e_questoes_analogas.json  processos_duracao_do_trabalho.json  processos_ferias.json  processos_outras_relacoes_de_trabalho.json  processos_prescricao.json  processos_prescricao_e_decadencia_no_direito_do_trabalho.json  processos_questoes_de_alta_complexidade,_grande_impacto_e_repercussao.json  processos_reducao_a_condicao_analoga_a_de_escravo.json  processos_rescisao_do_contrato_de_trabalho.json  processos_responsabilidade_civil_do_empregador.json  processos_sentenca_normativa.json  processos_verbas_remuneratorias,_indenizatorias_e_beneficios.json
apps/ingestion/src/ingestion/providers/: __init__.py
apps/ingestion/src/ingestion/submitter/: __init__.py
apps/worker-llm/: convert.py  main.py  pyproject.toml  result.json
apps/worker-llm/output/: mock.json
apps/worker-scrapper/: calling.py  pyproject.toml  solve.py
apps/worker-scrapper/pje_scraper/: __init__.py  cli.py  models.py  pipeline.py  scraper.py  worker.py
captcha_service/: README.md  main.py  pyproject.toml  test.py
captcha_service/data/: images.json
captcha_service/documents/: 00002564820255060171_integra_http_extracted.txt
captcha_service/pagina inicial/: index.html
captcha_service/pje_scraper/: __init__.py  captcha.py  models.py  pipeline.py  scraper.py
docs/: Arquitetura.md  Especificacao_Dados_TRT6.md  INDICE.md  Integracao_Captcha_Ingestion.md  Mensageria.md  Pipeline.md  Sincronizacao.md  Solução.md  Tópicos.md
docs/html/mais de um grau trt6/: index.html
docs/html/pagina com captcha/: index.html
extraction/: pyproject.toml  result.json
extraction/output/: mock.md
ingestion/: search_response.json
ingestion_service/: ingest.ipynb  search_response.json
scrapper/: main.py  pyproject.toml
scrapper/pje_scraper/: captcha_services.py  scraper.py
shared/: pyproject.toml
shared/src/shared/: celery_client.py  logger.py  s3_client.py  schemas.py  utils.py
shared/src/shared/schemas/: __init__.py  data_jud.py  processo.py  resumo_ia.py
