[project]
name = "projeto-trt6"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "shared",
    "worker-llm",
    "ingestion",
    "worker-scrapper"
]

[tool.uv.sources]
shared = { workspace = true }
worker-llm = { workspace = true }
ingestion = { workspace = true }
worker-scrapper = { workspace = true }

[tool.uv.workspace]
members = [
    "shared",
    "apps/ingestion",
    "apps/worker-llm",
    "apps/worker-scrapper",
    "apps/api",
]
