[project]
name = "projetos6"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.6.1",
    "django>=6.0.3",
    "django-filter",
    "djangorestframework>=3.16.1",
    "hf>=1.5.0",
    "pandas>=3.0.1",
    "pydantic>=2.12.5",
    "pypdf>=6.9.1",
]
