[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "shared", # Para usar os Schemas ao validar o que recebe dos Workers e para salvar o caminho do PDF no S3.
    "ingestion",
    "datasets>=4.6.1",
    "django>=6.0.3",
    "django-filter",
    "djangorestframework>=3.16.1",
    "hf>=1.5.0",
    "pandas>=3.0.1",
    "pypdf>=6.9.1",
    "django-stubs>=6.0.1",
    "djangorestframework-stubs>=3.16.8",
    "tabulate>=0.10.0",
    "django-silk>=5.5.0",
    "pytest>=9.0.2",
    "pytest-django>=4.11.1",
]

[tool.uv.sources]
shared = { workspace = true }
ingestion = { workspace = true }

[tool.django-stubs]
django_settings_module = "core.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "api.settings"
pythonpath = ["."]
testpaths = ["core/tests"]
