[project.scripts]
ingest = "ingestion.main:main"

[project]
name = "ingestion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "worker-scrapper",
    "shared", # Para validar os metadados que ele buscou antes de colocar na fila.

    "celery>=5.6.3",
]


[tool.setuptools.packages.find]
where = ["src"]
include = ["ingestion*"]
namespaces = false

[tool.uv.sources]
shared = { workspace = true } # Indica que deve buscar no monorepo
