[project]
name = "worker-scrapper"
version = "0.1.0"
description = "Scraper para PJe TRT-6 com resolução automática de captcha via ddddocr"
requires-python = ">=3.11"
dependencies = [
    "shared", # Para saber o formato da mensagem da fila e usar o cliente S3 para dar upload no PDF.

    "celery>=5.6.3",
    "ddddocr>=1.6.1",
    "httpx>=0.27",
    "numpy>=1.24",
    "opencv-python>=4.8",
    "playwright>=1.44",
    "selenium>=4.41.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-playwright"]

[project.scripts]
    pje-scraper = "pje_scraper.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pje_scraper*"]

[tool.uv.sources]
shared = { workspace = true }